# TechSearch

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: application.py  dependencies.py
app/core/: __init__.py
app/core/database/: db.py
app/core/settings/: settings.py
app/dto/selection_vehicle/: responses.py
app/models/: base.py
app/presentation/: __init__.py
app/presentation/selection_vehicle/: selection_vehicle.py
app/repositories/: base.py
app/repositories/exceptions/: __init__.py  exceptions.py
app/services/: __init__.py  base.py
app/services/exceptions/: __init__.py  exceptions.py
app/services/selection_vehicle/: selection_vehicle.py
app/utils/: __init__.py
app/utils/http_client/: base_http_client.py  tec_doc_client.py
app/utils/lifespan/: lifespan.py
